portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
  namespace: portfolio
spec:
  replicas: 10

  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: portfolio-container
          image: 443628962956.dkr.ecr.us-east-1.amazonaws.com/portfolio:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80


          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "200m"
