portfolio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  type: ClusterIP

  selector:
    app: portfolio

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
