portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-ingress
  namespace: portfolio

  annotations:

    kubernetes.io/ingress.class: nginx

    # Request timeout settings
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"

    # Upload size limit
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

    # Buffer optimization
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"

    # Retry failed upstreams
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502 http_503 http_504"

    # Rate limiting
    nginx.ingress.kubernetes.io/limit-rps: "20"

    # Access logs
    nginx.ingress.kubernetes.io/enable-access-log: "true"

    # Disable HTTPS redirect
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - host: rajat.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: portfolio-service

                port:
                  number: 80
